[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Combat/Battler_UI_Controller.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.831373, 0.168627, 0.168627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.913725, 0.639216, 0.639216, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.882353, 0.219608, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.627451, 0.964706, 0.627451, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Status" type="Button"]
margin_right = 547.0
margin_bottom = 69.0
rect_min_size = Vector2( 547, 69 )
focus_mode = 0
enabled_focus_mode = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_right = 0.35
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
text = "CharacterName"

[node name="Evasion" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
text = "Evasion: XX%"
align = 2
valign = 1

[node name="Critic" type="Label" parent="."]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -4.0
text = "Critic: XX%"
align = 2
valign = 1

[node name="LifeBar" type="ProgressBar" parent="."]
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -8.0
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LifeBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "xx/xxx"
align = 1

[node name="EnergyBar" type="ProgressBar" parent="."]
anchor_left = 0.65
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 2
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnergyBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "12/345"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="." to="." method="_on_Status_pressed"]
